--- a/prueba.ui
+++ b/prueba.ui
@@ -87,7 +87,7 @@ font: 63 20pt &quot;Source Serif Pro Semibold&quot;;
      </font>
     </property>
     <property name="currentIndex">
-     <number>0</number>
+     <number>1</number>
     </property>
     <widget class="QWidget" name="tab">
      <attribute name="title">
@@ -1691,7 +1691,7 @@ font: 63 20pt &quot;Source Serif Pro Semibold&quot;;
        <rect>
         <x>20</x>
         <y>100</y>
-        <width>256</width>
+        <width>191</width>
         <height>421</height>
        </rect>
       </property>
@@ -1706,6 +1706,12 @@ font: 63 20pt &quot;Source Serif Pro Semibold&quot;;
       <property name="selectionBehavior">
        <enum>QAbstractItemView::SelectRows</enum>
       </property>
+      <attribute name="horizontalHeaderVisible">
+       <bool>false</bool>
+      </attribute>
+      <attribute name="verticalHeaderVisible">
+       <bool>false</bool>
+      </attribute>
       <column>
        <property name="text">
         <string>Num. Factura</string>
@@ -1714,6 +1720,11 @@ font: 63 20pt &quot;Source Serif Pro Semibold&quot;;
       <column>
        <property name="text">
         <string>Fecha</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Acción</string>
        </property>
       </column>
      </widget>
@@ -1750,7 +1761,7 @@ font: 63 20pt &quot;Source Serif Pro Semibold&quot;;
          <x>20</x>
          <y>30</y>
          <width>801</width>
-         <height>21</height>
+         <height>27</height>
         </rect>
        </property>
        <layout class="QHBoxLayout" name="horizontalLayout_10">
@@ -1777,6 +1788,35 @@ font: 63 20pt &quot;Source Serif Pro Semibold&quot;;
           </property>
           <property name="styleSheet">
            <string notr="true">background-color: rgb(255, 255, 255);</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QPushButton" name="btnBuscaArt">
+          <property name="minimumSize">
+           <size>
+            <width>25</width>
+            <height>25</height>
+           </size>
+          </property>
+          <property name="maximumSize">
+           <size>
+            <width>25</width>
+            <height>25</height>
+           </size>
+          </property>
+          <property name="text">
+           <string/>
+          </property>
+          <property name="icon">
+           <iconset>
+            <normaloff>img/lupa.png</normaloff>img/lupa.png</iconset>
+          </property>
+          <property name="iconSize">
+           <size>
+            <width>20</width>
+            <height>20</height>
+           </size>
           </property>
          </widget>
         </item>
@@ -1893,9 +1933,9 @@ font: 63 20pt &quot;Source Serif Pro Semibold&quot;;
       <widget class="QWidget" name="horizontalLayoutWidget_11">
        <property name="geometry">
         <rect>
-         <x>90</x>
+         <x>20</x>
          <y>60</y>
-         <width>671</width>
+         <width>621</width>
          <height>31</height>
         </rect>
        </property>
@@ -1939,25 +1979,12 @@ font: 63 20pt &quot;Source Serif Pro Semibold&quot;;
           </property>
          </widget>
         </item>
-        <item>
-         <widget class="QPushButton" name="btnBuscaArt">
-          <property name="maximumSize">
-           <size>
-            <width>16777215</width>
-            <height>22</height>
-           </size>
-          </property>
-          <property name="text">
-           <string>Buscar</string>
-          </property>
-         </widget>
-        </item>
        </layout>
       </widget>
       <widget class="QPushButton" name="btnLimpiaArt">
        <property name="geometry">
         <rect>
-         <x>790</x>
+         <x>670</x>
          <y>60</y>
          <width>31</width>
          <height>31</height>
@@ -1969,6 +1996,74 @@ font: 63 20pt &quot;Source Serif Pro Semibold&quot;;
        <property name="icon">
         <iconset>
          <normaloff>img/reloadBtn.png</normaloff>img/reloadBtn.png</iconset>
+       </property>
+      </widget>
+      <widget class="QPushButton" name="btnReportArt">
+       <property name="geometry">
+        <rect>
+         <x>780</x>
+         <y>60</y>
+         <width>41</width>
+         <height>28</height>
+        </rect>
+       </property>
+       <property name="maximumSize">
+        <size>
+         <width>16777215</width>
+         <height>28</height>
+        </size>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>7</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+       <property name="icon">
+        <iconset>
+         <normaloff>img/impresora.png</normaloff>img/impresora.png</iconset>
+       </property>
+       <property name="iconSize">
+        <size>
+         <width>25</width>
+         <height>25</height>
+        </size>
+       </property>
+      </widget>
+      <widget class="QPushButton" name="btnPdfArt">
+       <property name="geometry">
+        <rect>
+         <x>720</x>
+         <y>60</y>
+         <width>41</width>
+         <height>28</height>
+        </rect>
+       </property>
+       <property name="maximumSize">
+        <size>
+         <width>16777215</width>
+         <height>28</height>
+        </size>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>7</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+       <property name="icon">
+        <iconset>
+         <normaloff>img/ojo.png</normaloff>img/ojo.png</iconset>
+       </property>
+       <property name="iconSize">
+        <size>
+         <width>25</width>
+         <height>25</height>
+        </size>
        </property>
       </widget>
      </widget>
@@ -1994,6 +2089,9 @@ font: 63 20pt &quot;Source Serif Pro Semibold&quot;;
         <bold>false</bold>
        </font>
       </property>
+      <attribute name="verticalHeaderVisible">
+       <bool>false</bool>
+      </attribute>
       <column>
        <property name="text">
         <string>Código</string>
