--- a/windowaviso.ui
+++ b/windowaviso.ui
@@ -92,13 +92,15 @@
     <string/>
    </property>
    <property name="pixmap">
-    <pixmap>img/warning.png</pixmap>
+    <pixmap resource="img/warning.qrc">:/newPrefix/warning.png</pixmap>
    </property>
    <property name="scaledContents">
     <bool>true</bool>
    </property>
   </widget>
  </widget>
- <resources/>
+ <resources>
+  <include location="img/warning.qrc"/>
+ </resources>
  <connections/>
 </ui>
